--- a/projects.html
+++ b/projects.html
@@ -85,8 +85,12 @@
 				<div class="banner">
 					<h5>TripGif - iOS Mobile Application</h5>
 					<img class="banner-img" src="projects/app_trip.png" alt="">
-					<img class="banner-img-small" src="projects/trip_2.png" alt="">
-
+					<div class="pcol">
+						<img class="banner-img-small" src="projects/app_trip1.png" alt="">
+						<img class="banner-img-small" src="projects/app_trip2.png" alt="">
+						<img class="banner-img-small" src="projects/app_trip3.png" alt="">
+					</div>
+				</div>
 					<div class="prow">
 						<div class="pcol">
 							<h4>Company</h4>TripGIF<br>Kaohsiung, Taiwan
@@ -110,7 +114,6 @@
 						<h4>Description</h4>
 						This project is collaborated with <b>MIS301 : System Analysis and Design Course</b> of NSYSU MIS department.
 						</div>
-					</div>
 				</div>			
 			<div class="detail" id="app-famifilm">
 				<div class="banner">
