--- a/artwork.html
+++ b/artwork.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -10,33 +11,31 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-	<script src="js/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
 	<script src="scroll.js"></script>
-
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
 	<title>WEI CHENG | Arts</title>
 </head>
 <body id="body">
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="resume.html" class="light">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
-
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 	</header>
 	<nav>
-		<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT ME</a></span>
+		<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT</a></span>
 		<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
 		<span class="btn_nav"><a href="artwork.html" class="a_nav light">ARTWORK</a></span>
+		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
 	</nav>
 	<article>
 		<div class="responsive">
@@ -96,11 +95,11 @@
 		</div>
 	</article>
 		<footer>
-		<span>Connect with me:</span><br>
+		<span>Contact wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">made by WEI CHENG, 2017.</span><br>
+		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
 	</footer>
 </body>
 </html>
