--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Chivo-Regular">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn SC">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -13,10 +13,9 @@
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
 	<script src="scroll.js"></script>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
 	<title>WEI CHENG | About</title>
 </head>
 <body id="body">
@@ -24,6 +23,7 @@
 		<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,9 +32,10 @@
 		<img class="logo" src="img/logo.png" alt="">
 	</header>
 	<nav>
-		<span class="btn_nav"><a href="index.html" class="a_nav light">ABOUT ME</a></span>
+		<span class="btn_nav"><a href="index.html" class="a_nav light">ABOUT</a></span>
 		<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
 		<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
+		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
 	</nav>
 
 	<article>
@@ -42,14 +43,16 @@
 		<img id="avatar" src="img/wei.jpg" alt="">
 		<h1>About Wei Cheng</h1>
 			<p>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for visiting my website. I am Wei Cheng, a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am going to exchange at San Diego State University, California for one semester in spring 2018. 
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for visiting my website. I am <b>Wei Cheng</b> , a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am going to exchange at San Diego State University, California for one semester in spring 2018. 
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism department. "Taking technologies into universities." is our main goal during internship.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism(DX) department. "Taking technologies into universities." is our main goal during internship. I was belonged to tech-team, responsible for analyze student developers' needs and planned workshops for them.
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!), swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am interested in <b>UI design</b>, <b>Human-Computer Interaction</b>, I want not just good at programming, but also sensitive with users' behavior. In my future, I would like to create solutions that can help human work more efficient and live better.
+			<br><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!) , swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic.
 			</p>
 			<h4>Resume :<br>
-				<a target="_blank" href="WEI CHENG.pdf">
+				<a target="_blank" href="WEICHENG.pdf">
 				<img id="pdf" src="img/pdf.png" alt=""></a>
 			</h4>
 		</div>
@@ -80,11 +83,11 @@
 		</div>
 	</article>
 	<footer>
-		<span>Connect with me:</span><br>
+		<span>Contact wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">made by WEI CHENG, 2017.</span><br>
+		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
 	</footer>
 </body>
 </html>
