--- a/artwork.html
+++ b/artwork.html
@@ -18,7 +18,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
 	<title>WEI CHENG | Arts</title>
 </head>
-<body id="body">
+<body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
@@ -28,6 +28,7 @@
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
+<div class="wrapper">
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 	</header>
@@ -94,12 +95,13 @@
 		  </div>
 		</div>
 	</article>
-		<footer>
+	<footer>
 		<span>Contact wei:</span><br>
-		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
-		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
-		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
+		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
 	</footer>
+</id>
 </body>
 </html>
