--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
 	<title>WEI CHENG | About</title>
 </head>
-<body id="body">
+<div class="drawer">
+	<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
+	<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
+	<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
+	<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
+</div>
+<body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
@@ -28,6 +34,7 @@
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
+<div class="wrapper">
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 	</header>
@@ -37,7 +44,6 @@
 		<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
 		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
 	</nav>
-
 	<article>
 		<div id="about_text">
 		<img id="avatar" src="img/wei.jpg" alt="">
@@ -84,10 +90,11 @@
 	</article>
 	<footer>
 		<span>Contact wei:</span><br>
-		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
-		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
-		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
+		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
 	</footer>
+</div>
 </body>
 </html>
