--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>	
 	<title>WEI CHENG | Projects</title>
 </head>
-<body id="body">
+<body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
@@ -28,6 +28,7 @@
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
+<div class="wrapper">
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 	</header>
@@ -37,7 +38,6 @@
 		<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
 		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
 	</nav>
-
 	<article>
 	<div class="row">
 	    <div class="project-small" onclick="openProject('app-trip')">
@@ -86,67 +86,79 @@
 				<div class="banner">
 					<h5>TripGif - iOS Mobile Application</h5>
 					<img class="banner-img" src="projects/app_trip.png" alt="">
-					<div class="pcol">
+					<div class="pcol-img">
 						<img class="banner-img-small" src="projects/app_trip1.png" alt="">
 						<img class="banner-img-small" src="projects/app_trip2.png" alt="">
 						<img class="banner-img-small" src="projects/app_trip3.png" alt="">
 					</div>
 				</div>
-					<div class="prow">
-						<div class="pcol">
-							<h4>Company</h4>TripGIF<br>Kaohsiung, Taiwan
-						</div>
-						<div class="pcol">
-							<h4>Duration</h4>6 months
-						</div>
+				<div class="prow">
+					<div class="pcol">
+						<h4><span class="fa icon fa-building" style="font-size:26px"></span>Company</h4>TripGIF<br>Kaohsiung, Taiwan
 					</div>
-					<div class="prow">
-						<div class="pcol">
-							<h4>Position</h4>
-							<li>Team Leader of 6 people</li>
-							<li>Application Developer</li>
-						</div>
-						<div class="pcol">
-							<h4>Tools</h4>
-							<li>Swift3, Xcode</li>
-						</div>
+					<div class="pcol">
+						<h4><span class="fa icon fa-clock-o" style="font-size:26px"></span>Duration</h4>6 months
 					</div>
-					<div class="prow">
-						<h4>Description</h4>
-						This project is collaborated with <b>MIS301 : System Analysis and Design Course</b> of NSYSU MIS department.
-						</div>
-				</div>			
+					<div class="pcol">
+						<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span> 
+						Position</h4>
+						<li>Team Leader of 6 people</li>
+						<li>User Interface Developer / Database Developer</li>
+					</div>
+					<div class="pcol">
+						<h4><span class="fa icon fa-wrench" style="font-size:26px"></span> Tools</h4>
+						<li>Swift3, Xcode</li>
+					</div>
+				</div>
+				<div class="prow">
+					<div class="pcol">
+						<h4><h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
+						This project is start-up company TripGIF collaborated with <b>MIS301 : System Analysis and Design Course</b> of NSYSU MIS department for a semester.
+						<br><br>
+						<li><b>Home page</b>, users can simply click the join button and log in, the id is corresponding to each mobile device.
+						</li>
+						<li>In <b>Login page</b>, users can customized avatar and username. User can add a new group map or join an exist one by entering the special number.
+						</li>
+						<li><b>On Travel map</b>, all members' position are shown on the map according to each GPS location. There is a chat space for all members to send text or images.</li>
+					</div>
+				</div>
+			</div>		
 			<div class="detail" id="app-famifilm">
 				<div class="banner">
 					<h5>FamiFilm - Android Mobile Application</h5>
 					<img class="banner-img" src="projects/app_famifilm.png" alt="">
-				<div class="pcol">
+				<div class="pcol-img">
 					<img class="banner-img-small" src="projects/app_famifilm1.png" alt="">
 					<img class="banner-img-small" src="projects/app_famifilm2.png" alt="">
 					<img class="banner-img-small" src="projects/app_famifilm3.png" alt="">
 				</div>
-				</div>
 				<div class="prow">
 					<div class="pcol">
-						<h4>Position</h4>
-						<li>Group Leader</li>
+						<h4><span class="fa icon fa-clock-o" style="font-size:26px"></span>Duration</h4>9 months
+					</div>
+					<div class="pcol">
+						<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span>Position</h4>
+						<li>Group Leader of 6 people</li>
 						<li>User Interface Designer</li>
-						<br>
-						<h4>Duration</h4>9 months
 					</div>
 					<div class="pcol">
-						<h4>Tools</h4>
-						<li>sketch</li>
-						<li>Photoshop</li>
-						<li>java</li>
-						<li>Firebase Database</li>
+						<h4><span class="fa icon fa-wrench" style="font-size:26px"></span>Tools</h4>
+						<li>Sketch, Photoshop</li>
+						<li>Java, Firebase Database</li>
+					</div>
 					</div>
 				</div>
 				<div class="prow">
-					<h4>Description</h4>
-						FamiFilm is the graduation milestone project for Information Management Department, NationalSun Yat-sen University.
-						<br><br>
-						Is is an android mobile application, by using images to represent functions include <b>group calendar</b>, <b>image phonebook</b>, <b>playing video</b> designed for family members of all ages.
+					<div class="pcol">
+						<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
+							FamiFilm is the graduation capstone project for Information Management Department, National Sun Yat-sen University.
+							<br>
+							It is an android mobile application, by using images to represent functions include <b>Group Calendar</b>, <b>Image Phonebook</b>, <b>Playing Video</b>.<br>FamiFilm was designed for family members in all ages.
+							<br><br>
+							<li><b>Group Calendar</b> provides a shared place for families to add events, users can click on the bell icon to turn on notification.</li>
+							<li><b>Image Phonebook</b> show each members' photos, clicking on the photos can call that person or edit the contact information.</li>
+							<li><b>Playing Video</b> shows videos from other family members in that day. By sliding left or right, and clicking on the play button can easily control it.</li>
+					</div>
 				</div>
 			</div>
 			<div class="detail" id="trip-ks">
@@ -160,22 +172,26 @@
 				</div>
 					<div class="prow">
 						<div class="pcol">
-							<h4>Position</h4>Front-end Developer
-							<br><br>
-							<h4>Duration</h4>5 months
+							<h4><span class="fa icon fa-building" style="font-size:26px"></span>Company</h4>TripGIF<br>Kaohsiung, Taiwan
 						</div>
 						<div class="pcol">
-							<h4>Tools</h4>
+							<h4><span class="fa icon fa-clock-o" style="font-size:26px"></span>Duration</h4>5 months
+						</div>
+						<div class="pcol">
+							<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span>Position</h4>Front-end Developer
+						</div>
+						<div class="pcol">
+							<h4><h4><span class="fa icon fa-wrench" style="font-size:26px"></span>Tools</h4>
 							<li>HTML, CSS, javascript</li>
-							<li>MySQL Database</li>
-							<br>
-							<h4>Company</h4>TripGIF<br>Kaohsiung, Taiwan							
+							<li>MySQL Database</li>						
 						</div>
 					</div>
 					<div class="prow">
-						<h4>Description</h4>
-						 This website is customized for Eco-Mobility Festival. Users can uploaded images to the web service ,and the imbedded google map can show the image on the street scene based on each location. <br><br>I am responsible for communicate with back-end developers and the visual designer, turning visual design into front-end code.
-						 </div>
+						<div class="pcol">
+							<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
+							This website is customized for Eco-Mobility Festival. Users can uploaded images to the web service ,and the imbedded google map can show the image on the street scene based on each location. <br><br>I am responsible for communicate with back-end developers and the visual designer, turning visual design into front-end code.
+							</div>
+						</div>
 			</div>
 			<div class="detail" id="game">
 				<div class="banner">
@@ -184,25 +200,27 @@
 					<img class="banner-img" src="projects/nsysuhero_game.png" alt="">
 				</div>
 				<div class="prow">
-				<div class="pcol">
-					<h4>Position</h4>
-					<li>Game Scene Design</li>
-					<li>User Interface Design</li>
-				</div>
-				<div class="pcol">
-					<h4>Tools</h4>
-					<li>Adobe Photoshop</li>
-					<li>Unity</li>
-				</div>
+					<div class="pcol">
+						<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span>Position</h4>
+						<li>Game Scene Design</li>
+						<li>User Interface Design</li>
+					</div>
+					<div class="pcol">
+						<h4><span class="fa icon fa-wrench" style="font-size:26px"></span>Tools</h4>
+						<li>Adobe Photoshop</li>
+						<li>Unity</li>
+					</div>
 				</div>
 				<div class="prow">
-					<h4>Description</h4>
+				<div class="pcol">
+					<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
 					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand. This 2D game was made in a coding club hackathon competition of Department of Information Management. <br>
 					<br>
 					Play it ! : 
 					<a href="https://chengwei1010.github.io/nsysuHero/">
-						game link
+						game link(use Google Chrome or FireFox)
 					</a>
+				</div>
 				</div>
 			</div>
 		<div class="detail" id="video_famifilm">
@@ -224,10 +242,11 @@
 	<div id="overlay" onclick="closeProject()"></div>
 	<footer>
 		<span>Contact wei:</span><br>
-		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa fa-facebook" style="font-size:25px"></a>
-		<a target="_blank" href="https://github.com/ChengWei1010" class="fa fa-github" style="font-size:25px"></a>
-		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa fa-linkedin" style="font-size:25px"></a><br>
+		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
+		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
+		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
 	</footer>
+</div>
 </body>
 </html>
