--- a/artwork.html
+++ b/artwork.html
@@ -38,62 +38,58 @@
 		<span class="btn_nav"><a href="artwork.html" class="a_nav light">ARTWORK</a></span>
 		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
 	</nav>
+
 	<article>
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/oilpainting.jpg" width="300" height="200">
-		    </a>
-		    <h3>Oil Painting</h3>
-		  </div>
+	<div class="toolbar mb2 mt2">
+	  <button class="btn fil-cat" href="" data-rel="all">All</button>
+	  <button class="btn fil-cat" data-rel="poster">Posters</button>
+	  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
+	  <button class="btn fil-cat" data-rel="paintings">Paintings</button>
+	  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
+	</div> 
+	<div id="portfolio">
+		<div class="tile scale-anm paintings all">
+	    	<img src="art/sunset.jpg" alt=""/>
 		</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/calligraphy.png"width="300" height="200">
-		    </a>
-		    <h3>calligraphy</h3>
-		  </div>
+		<div class="tile scale-anm calligraphy all">
+			<img src="art/calli-1.png" alt="" />
+		</div>
+		
+		<div class="tile scale-anm flyers all">
+			<img src="art/famifilm.png" alt="" /> 
 		</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/famifilm.png" width="300" height="200">
-		    </a>
-		    <h3>FamiFilm flyer</h3>
-		  </div>
+		<div class="tile scale-anm poster all">
+			<img src="art/ncpc.jpg" alt="" /> 
 		</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/ncpc.jpg" width="300" height="200">
-		    </a>
-		    <h3>NCPC poster</h3>
-		  </div>
+		<div class="tile scale-anm poster all">
+			<img src="art/careercourse.jpg" alt="" /> 
+		</div>
+		
+		<div class="tile scale-anm calligraphy all">
+			<img src="art/calli-4.png" alt="" />
+		</div>
+		<div class="tile scale-anm poster all">
+			<img src="art/tair.jpg" alt="" /> 
 		</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/careercourse.jpg" width="300" height="200">
-		    </a>
-		    <h3>Library Training Course poster</h3>
-		  </div>
-		</div>
+		<div class="tile scale-anm calligraphy all">
+			<img src="art/calli-3.png" alt="" />
+		</div>		
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/tair.jpg" width="300" height="200">
-		    </a>
-		    <h3>TAIR poster</h3>
-		  </div>
+		<div class="tile scale-anm poster all">
+			<img src="art/library.jpg" alt="" /> 
+		</div>	
+		
+		<div class="tile scale-anm calligraphy all">
+			<img src="art/calli-2.png" alt="" />
 		</div>
+	</div>
 
-		<div class="responsive">
-		  <div class="gallery">
-		      <img src="art/library.png" width="300" height="200">
-		    </a>
-		    <h3>Library Activity poster</h3>
-		  </div>
-		</div>
+	<div style="clear:both;"></div>
+
 	</article>
 	<footer>
 		<span>Contact wei:</span><br>
