--- a/index.html
+++ b/index.html
@@ -51,33 +51,25 @@
 			<p>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi! Thank you for visiting my website. I am <b>Wei Cheng</b> , a senior bachelor student major in Information Management System in National Sun-Yat sen University, Taiwan. I am going to exchange at San Diego State University, California for one semester in spring 2018. 
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of Microsoft Student Partners in Taiwan, which is under the Developer Experience and Evangelism(DX) department. "Taking technologies into universities." is our main goal during internship. I was belonged to tech-team, responsible for analyze student developers' needs and planned workshops for them.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I was the intern of <b>Microsoft Student Partners in Taiwan</b>, which is under the Developer Experience and Evangelism(DX) department. "Taking technologies into universities." is our main goal during internship. I was belonged to tech-team, responsible for analyze student developers' needs and planned workshops for them.
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am interested in <b>UI design</b>, <b>Human-Computer Interaction</b>, I want not just good at programming, but also sensitive with users' behavior. In my future, I would like to create solutions that can help human work more efficient and live better.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am interested in <b>UI design</b>, <b>Human-Computer Interaction</b>, <b>User Experience</b>. I want not just good at programming, but also sensitive with users' behavior. In my future, I would like to create solutions that can help human work more efficient and live better.
 			<br><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!) , swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic.
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In my free time, I like to jog (attending marathons!) , swim, and playing the guitar. Doing these activities can keep myself healthy and enthusiastic. I post singing cover videos on my YouTube Channel -- <u><a href="https://www.youtube.com/channel/UC5CrxtXTup8O6wYhAoQwdVA" target="_blank">LilyCheng</a></u>. 
 			</p>
-			<h4>Resume :<br>
-				<a target="_blank" href="WEICHENG.pdf">
-				<img id="pdf" src="img/pdf.png" alt=""></a>
-			</h4>
 		</div>
 		<div id="skill">
 			<h1>Education</h1>
 			<b>B.A. of Information Management System<br></b>
-			National Sun-Yat sen University, Kaohsiung Taiwan<br>
+			National Sun-Yat sen University, Taiwan<br>
 			<br>
 			<b>Exchange Student of Information Managament<br></b>
-			San Diego State University, California US
-			<br>
+			San Diego State University, California, US
 
 			<h1>Programming</h1>
 			<li>HTML, CSS, javascript</li>
 			<li>java</li>
-			<li>MySQL database</li>
-			<li>SQLite database</li>
-			<li>Firebase database</li>
-			<br>
+			<li>MySQL, SQLite, Firebase database</li>
 
 			<h1>Tools</h1>
 			<li>Sketch</li>
