--- a/projects.html
+++ b/projects.html
@@ -56,12 +56,10 @@
 	    	<img class="project-size" src="projects/trip_ks.png" alt="">
 	    	<h2>TripGIF - KS Exhibition Website</h2>
 	    </div>
-	    <a href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">
-		    <div class="project-small">
-		    	<img class="project-size" src="projects/krtco.png" alt="">
-		    	<h2>Kaohsiung Rapid Transit Co. - Website</h2>
-		    </div>
-	    </a>
+	    <div class="project-small" onclick="openProject('web-krtco')">
+	    	<img class="project-size" src="projects/krtco.png" alt="">
+	    	<h2>Kaohsiung Rapid Transit Co. - Website</h2>
+	    </div>
 	</div>
 	<div class="row">
 	    <div class="project-small" onclick="openProject('game')">
@@ -189,10 +187,43 @@
 					<div class="prow">
 						<div class="pcol">
 							<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
-							This website is customized for Eco-Mobility Festival. Users can uploaded images to the web service ,and the imbedded google map can show the image on the street scene based on each location. <br><br>I am responsible for communicate with back-end developers and the visual designer, turning visual design into front-end code.
+							This website is customized for Eco-Mobility World Festival. Users can uploaded images to the web service ,and the imbedded google map can show the image on the street scene based on each location. <br><br>I am responsible for communicate with back-end developers and the visual designer, turning visual design into front-end code.
 							</div>
 						</div>
 			</div>
+			<div class="detail" id="web-krtco">
+				<div class="banner">
+					<h5>Website KRTCO</h5>
+					<div class="pcol">
+						<img class="banner-img-medium" src="projects/.png" alt="">
+						<img class="banner-img-medium" src="projects/.png" alt="">
+					</div>
+				</div>
+					<div class="prow">
+						<div class="pcol">
+							<h4><span class="fa icon fa-building" style="font-size:26px"></span>Company</h4>Kaohsiung Rapid Transit Corporation<br>Kaohsiung, Taiwan
+						</div>
+						<div class="pcol">
+							<h4><span class="fa icon fa-clock-o" style="font-size:26px"></span>Duration</h4>6 months
+						</div>
+						<div class="pcol">
+							<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span>Position</h4>Front-end Developer
+						</div>
+						<div class="pcol">
+							<h4><h4><span class="fa icon fa-wrench" style="font-size:26px"></span>Tools</h4>
+							<li>HTML, CSS, javascript</li>
+						</div>
+					</div>
+					<div class="prow">
+						<div class="pcol">
+							<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
+							This is a website for a corporate image filming competition. <br>
+							I was in a web development team with 2 database developers. <br>
+							I acted as the <b>front-end developer</b>, analyzed the needs of the contest project manager and then communicated with the visual designer. Finally, I translated the design into code.
+						    <br><br>Visit the website : <a href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">link</a>
+						</div>
+					</div>
+			</div>			
 			<div class="detail" id="game">
 				<div class="banner">
 				<h5>NSYSU Hero - Unity 2D Game</h5>
@@ -200,6 +231,9 @@
 					<img class="banner-img" src="projects/nsysuhero_game.png" alt="">
 				</div>
 				<div class="prow">
+					<div class="pcol">
+						<h4><span class="fa icon fa-clock-o" style="font-size:26px"></span>Duration</h4>1 week
+					</div>
 					<div class="pcol">
 						<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span>Position</h4>
 						<li>Game Scene Design</li>
@@ -214,16 +248,17 @@
 				<div class="prow">
 				<div class="pcol">
 					<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
-					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand. This 2D game was made in a coding club hackathon competition of Department of Information Management. <br>
-					<br>
+					This 2D game was made in a <b>hackathon competition</b> of Department of Information Management. <br>
+					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand. 
+					<br><br>
 					Play it ! : 
 					<a href="https://chengwei1010.github.io/nsysuHero/">
-						game link(use Google Chrome or FireFox)
+						game link (please use Google Chrome or FireFox)
 					</a>
 				</div>
 				</div>
 			</div>
-		<div class="detail" id="video_famifilm">
+			<div class="detail" id="video_famifilm">
 			<h5>FamiFilm DEMO Video - NSYSU graduation project</h5>
 			<div class="banner">
 				<video id="vid" controls>
@@ -234,7 +269,7 @@
 				<li>iMovie</li>
 				<li>keynote</li><br>
 				<h4>Description</h4>
-				This is the graduation project mobile application demo video.<br>It introduces the main funtions of the app in Chinese and English.
+				This is the graduation project mobile <b>application demo video</b>.<br>It introduces the main funtions of the app in Chinese and English.<br>I use MacOS Keynote to layout the content and apply slides animation, then use iMovie to add sound effects and the background music. <br>This is a fast way to produce a short video clip.
 			</div>
 			</div>
 		</div>
