--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
 	<title>WEI CHENG | About</title>
 </head>
-<div class="drawer">
-	<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
-	<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
-	<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
-	<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
-</div>
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
-		<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
