--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
 		<span class="drawer_btn_nav"><a href="projects.html" class="light">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
-		<span class="drawer_btn_nav"><a href="resume.pdf">RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
